# simple-googletest-cmake-sample

./: .gitignore  CMakeLists.txt  README.md  build.sh  mk.sh
src/: CMakeLists.txt  ClassA.cpp  ClassA.h  ClassB.cpp  ClassB.h
test/: CMakeLists.txt  ClassATest.cpp  ClassBTest.cpp  main.cpp
